--- a/AsyncExtensions.Benchmark/AsyncExtensions.Benchmark.csproj
+++ b/AsyncExtensions.Benchmark/AsyncExtensions.Benchmark.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <OutputType>Exe</OutputType>
-        <LangVersion>9</LangVersion>
+        <LangVersion>default</LangVersion>
         <RootNamespace>IllusionistSoft.AsyncExtensions.Benchmark</RootNamespace>
     </PropertyGroup>
 
