--- a/AsyncExtensions.UnitTests/AsyncExtensions.UnitTests.csproj
+++ b/AsyncExtensions.UnitTests/AsyncExtensions.UnitTests.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
 
         <RootNamespace>IllusionistSoft.AsyncExtensions.UnitTests</RootNamespace>
+
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
